# Libtorch_model_load_1

./: CMakeLists.txt  README.md  main.cxx  model.pt
